# sshuttle-rs

./: .gitignore  Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_CN.md  ARCHITECTURE_EN.md  POLICY_CN.md  POLICY_EN.md  WINDOWS_NATIVE_CN.md  WINDOWS_NATIVE_EN.md
examples/: policy.sample.json  policy.sample.yaml
src/: app.rs  config.rs  doctor.rs  main.rs  policy.rs  win_divert_native.rs  win_native.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/proxy/: dns.rs  http_connect.rs  mod.rs  original_dst.rs  socks4.rs  socks5.rs  udp_transparent.rs
