[package]
name = "sshuttle-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-util", "process", "signal", "sync", "time"] }